add github link

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             <button class="button" id="reset_code" onclick="reset_code()"><span class="material-symbols-outlined">close</span></button>
             <button class="button" id="test_code" onclick="test_code()"><span class="material-symbols-outlined">play_arrow</span></button>
         </div>
+
+        <a href="https://github.com/owenfiscus/codecrack"><div id="github_link"></div></a>
     </body>
 </html>
 
