begin work on deletion, comments

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
         <div id="bottom_buttons">
             <button class="button" id="reset_code" onclick="reset_code()"><span class="material-symbols-outlined">close</span></button>
+            <button class="button" id="delete_digit" onclick="delete_digit()"><span class="material-symbols-outlined">backspace</span></button>
             <button class="button" id="test_code" onclick="test_code()"><span class="material-symbols-outlined">play_arrow</span></button>
         </div>
 
