--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- LOOKING AT THE SOURCE CODE IS CHEATING YOU CHEATER -->
-<!-- codecracker | index.html -->
+<!-- codecracker | owen fiscus | https://github.com/owenfiscus/codecrack | index.html -->
 
 <head>
     <title>codecrack</title>
